# CodeWhale

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  config.example.toml
.github/workflows/: build-windows.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  provider.rs  tests.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/src/: acp_server.rs  config.rs  localization.rs  prompts.rs  runtime_threads.rs  task_manager.rs
crates/tui/src/config/: tests.rs
crates/tui/src/core/: engine.rs
crates/tui/src/core/engine/: context.rs  tests.rs  turn_loop.rs  (+2 more)
crates/tui/src/fleet/: host.rs  worker_runtime.rs
crates/tui/src/prompts/: constitution.md
crates/tui/src/tools/: dev_server_readiness.rs  file.rs  mod.rs  registry.rs  verifier.rs  web_search.rs
crates/tui/src/tui/: active_cell.rs  app.rs  approval.rs  footer_ui.rs  history.rs  markdown_render.rs  provider_picker.rs  sidebar.rs  subagent_routing.rs  tool_routing.rs  transcript.rs  ui.rs  workspace_context.rs
docs/: ACP_REGISTRY_SUBMISSION.md  AGENT_RUNNER.md  CONFIGURATION.md  PROVIDERS.md
integrations/feishu-bridge/src/: index.mjs  lib.mjs
npm/codewhale/: package.json
scripts/: check-provider-registry.py
scripts/benchmarks/: run-pinchbench.sh
web/lib/: facts.generated.ts
(+6 files in other folders)
